# tradutorpy

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  tradutorpy.glade  tradutorpy.py
